chore: update x-amazon-apigateway-integration
