# openapi-gateway.yaml
@@ -1,5 +1,26 @@
 openapi: 3.0.0
 paths:
+  /health:
+    get:
+      description: Route used to check the status of the system and its dependencies.
+      operationId: AppController_healthCheck
+      parameters: []
+      responses:
+        '200':
+          description: The service is operating normally
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PingResponseOk'
+        '503':
+          description: Service unavailable
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PingResponseErrorInterface'
+      summary: Check service status
+      tags:
+        - app
   /user:
     post:
       description: Create a new user
@@ -27,6 +48,11 @@ paths:
       summary: Create a new user
       tags:
         - user
+      x-amazon-apigateway-integration:
+        type: HTTP_PROXY
+        httpMethod: POST
+        uri: http://your-api-url/user
+        payloadFormatVersion: 1
     get:
       description: Return all users
       operationId: UserController_findAll
@@ -41,6 +67,11 @@ paths:
       summary: Return all users
       tags:
         - user
+      x-amazon-apigateway-integration:
+        type: HTTP_PROXY
+        httpMethod: GET
+        uri: http://your-api-url/user
+        payloadFormatVersion: 1
   /user/{id}:
     get:
       description: Return one of many users
@@ -67,27 +98,6 @@ paths:
       summary: Return one of many users
       tags:
         - user
-  /health:
-    get:
-      description: Route used to check the status of the system and its dependencies.
-      operationId: AppController_healthCheck
-      parameters: []
-      responses:
-        '200':
-          description: The service is operating normally
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PingResponseOk'
-        '503':
-          description: Service unavailable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PingResponseErrorInterface'
-      summary: Check service status
-      tags:
-        - app
 info:
   title: Api Swagger
   description: Implementation swagger docs
@@ -103,6 +113,77 @@ tags:
     description: Collection of service endpoints such as healthcheck
 components:
   schemas:
+    ServiceCheck:
+      type: object
+      properties:
+        status:
+          type: string
+          example: up
+          enum:
+            - up
+            - down
+          description: Current service status
+        details:
+          type: string
+          example: Service is online and responding
+          description: Service status details
+      required:
+        - status
+        - details
+    PingResponseOk:
+      type: object
+      properties:
+        status:
+          type: string
+          example: success
+          enum:
+            - success
+            - error
+          description: Overall verification status
+        timestamp:
+          type: string
+          example: '2025-03-28T14:30:00.000Z'
+          description: Verification Timestamp
+        checks:
+          type: object
+          properties:
+            service:
+              $ref: '#/components/schemas/ServiceCheck'
+            swagger:
+              $ref: '#/components/schemas/ServiceCheck'
+          required: []
+      required:
+        - status
+        - timestamp
+        - checks
+    PingResponseErrorInterface:
+      type: object
+      properties:
+        status:
+          type: string
+          example: error
+          enum:
+            - error
+          description: Verification error status
+        timestamp:
+          type: string
+          example: '2025-03-28T14:30:00.000Z'
+          description: Error timestamp
+        checks:
+          type: object
+          properties:
+            service:
+              example:
+                status: down
+                details: Error checking service health
+            error:
+              type: string
+              example: Service Unavailable
+              description: Error message
+      required:
+        - status
+        - timestamp
+        - checks
     CreateUserDto:
       type: object
       properties:
@@ -187,77 +268,6 @@ components:
         - status
         - timestamp
         - error
-    ServiceCheck:
-      type: object
-      properties:
-        status:
-          type: string
-          example: up
-          enum:
-            - up
-            - down
-          description: Current service status
-        details:
-          type: string
-          example: Service is online and responding
-          description: Service status details
-      required:
-        - status
-        - details
-    PingResponseOk:
-      type: object
-      properties:
-        status:
-          type: string
-          example: success
-          enum:
-            - success
-            - error
-          description: Overall verification status
-        timestamp:
-          type: string
-          example: '2025-03-28T14:30:00.000Z'
-          description: Verification Timestamp
-        checks:
-          type: object
-          properties:
-            service:
-              $ref: '#/components/schemas/ServiceCheck'
-            swagger:
-              $ref: '#/components/schemas/ServiceCheck'
-          required: []
-      required:
-        - status
-        - timestamp
-        - checks
-    PingResponseErrorInterface:
-      type: object
-      properties:
-        status:
-          type: string
-          example: error
-          enum:
-            - error
-          description: Verification error status
-        timestamp:
-          type: string
-          example: '2025-03-28T14:30:00.000Z'
-          description: Error timestamp
-        checks:
-          type: object
-          properties:
-            service:
-              example:
-                status: down
-                details: Error checking service health
-            error:
-              type: string
-              example: Service Unavailable
-              description: Error message
-      required:
-        - status
-        - timestamp
-        - checks
 externalDocs:
   description: Tech DOC
   url: https://arquiteturaestacio.visualstudio.com/JUCA/_wiki/wikis/JUCA.wiki/22555/-DOC-missoes-recompensas-edge
