# src/user/user.controller.ts
@@ -4,6 +4,7 @@ import { CreateUserDto } from './dto/create-user.dto';
 import {
   ApiBadRequestResponse,
   ApiCreatedResponse,
+  ApiExtension,
   ApiNotFoundResponse,
   ApiOkResponse,
   ApiOperation,
@@ -13,12 +14,19 @@ import { UserBadRequestResponseInterface } from './interfaces/user-bad-request.i
 import { UserNotFoundRequestResponseInterface } from './interfaces/user-not-found-request.interface';
 import { SearchUserDto } from './dto/search-user.dto';
 
+const variavel_da_uri = process.env.URI;
 @ApiTags('user')
 @Controller('user')
 export class UserController {
   constructor(private readonly userService: UserService) {}
 
   @Post()
+  @ApiExtension('x-amazon-apigateway-integration', {
+    type: 'HTTP_PROXY',
+    httpMethod: 'POST',
+    uri: `http://${variavel_da_uri}/user`,
+    payloadFormatVersion: 1.0,
+  })
   @ApiOperation({
     summary: 'Create a new user',
     description: 'Create a new user',
@@ -39,6 +47,12 @@ export class UserController {
   }
 
   @Get()
+  @ApiExtension('x-amazon-apigateway-integration', {
+    type: 'HTTP_PROXY',
+    httpMethod: 'GET',
+    uri: `http://${variavel_da_uri}/user`,
+    payloadFormatVersion: 1.0,
+  })
   @ApiOperation({
     summary: 'Return all users',
     description: 'Return all users',
